hpm/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hpm
  labels:
    name: hpm
    consul.hashicorp.com/connect-inject: "false"
